# Reading-Partner

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  embedpdf-spike.html  index.html  package.json  vite.config.ts
.github/scripts/: android-smoke-gate.sh  assert-linkedit-vmsize.py
.github/workflows/: android-apk.yml  android-engine-smoke.yml  ios-sideload-ipa.yml  ios-simulator-smoke.yml  ios-testflight.yml  release.yml
docs/: 00-项目共识.md  01-交互设计.md  02-AI核心与memory设计.md  03-陪读交互-通话模型.md  04-reader对接备忘.md  05-AI接入备忘.md  06-iOS发布路线.md  07-EmbedPDF替换调研.md  08-EmbedPDF-spike结果.md  09-学习机模式.md  10-学习机竞品调研.md  11-iOS-TestFlight发布.md  12-图片讲解.md  13-账户同步.md  14-iOS-Google登录.md  14-笔记与PPT.md  15-语音输入.md  16-知识图谱.md  17-信息源系统.md  18-iOS-Google登录.md  19-iOS侧载安装.md
docs/north-star/: README.md  companion.md  epub.md  handwriting.md  memory.md  podcast-video.md  webview-pipe.md
docs/pitfall/: 01-pdf-relative-path.md  02-math-sumprecise-polyfill.md  03-initialized-promise.md  04-programmatic-select-no-popup.md  05-onselect-echo-required.md  06-host-annotation-update-api.md  07-image-annotation-base64.md  08-build-network-dependency.md  09-appdata-glob-capability.md  10-cross-realm-uint8array.md  11-engine-calls-before-init.md  12-webkitgtk-drag-latency.md  13-pen-stroke-no-popup-coords.md  14-dev-build-oomd-session-kill.md  15-plugin-http-forced-origin.md  16-webkitgtk-clipboard-image.md  17-view-wrapper-hides-pdfview-api.md  18-embedpdf-load-hangs-progress-zero.md  19-embedpdf-initialdocuments-hang.md  20-embedpdf-renderlayer-eats-pointer.md  21-embedpdf-worker-engine-hangs.md  22-embedpdf-scrolltopage-viewport-gap.md  23-embedpdf-current-page-metrics-zero.md  24-pdfjs-operatorlist-needs-dom.md  25-embedpdf-no-region-raster.md  26-plugin-http-abort-resource-id-leak.md  27-embedpdf-searchinpage-not-on-engine.md  28-http-scope-is-unix-glob.md  29-voice-stt-fetch-and-ipc-bytes.md  30-webview-csp-coep-block-external-img.md  31-ios-deep-link-scheme-build-time.md  32-embedpdf-useviewportref-vs-element.md  33-ios-no-cross-origin-isolation-still-renders.md  34-ios-init-default-icon-alpha.md  35-ios-unsigned-linkedit-vmsize.md  36-appdata-root-not-created-first-write.md  37-embedpdf-page-touch-action-none-all-modes.md  README.md
patches/: reader-view-web.patch
public/reader/: reader-host.html
scripts/: build-reader.sh  copy-pdfium-wasm.sh  dev.sh  sideload-ios.py
src/: App.tsx  aiMock.ts  annotations.ts  bun-test.d.ts  context.ts  events.ts  main.tsx  reader-contract.ts  reader.ts  settings.ts  storage.ts  styles.css  tauri-fetch.ts  threads.ts  topics.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.ios.plist  Info.plist  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  migrate.rs  oauth_callback.rs  voice.rs
src/ai/: agent.ts  aiClient.ts  aiMock.ts  anthropic-oauth.ts  credentials.ts  device-code.test.ts  device-code.ts  fetch-bridge.ts  image-utils.ts  index.ts  openai-oauth.test.ts  openai-oauth.ts  providers.ts  reading-context.ts  watchdog.ts
src/app/: annotations.ts  clipboard.ts  context.ts  events.ts  library.ts  migrate.ts  platform.ts  reader-contract.ts  settings.ts  storage.ts  threads.ts  topics.ts
src/components/: AICallPanel.tsx  AnnotationPopup.css  AnnotationPopup.tsx  ArticleView.tsx  BriefingPage.tsx  CallBubble.tsx  CallView.tsx  ChatPipCard.tsx  FigureCard.tsx  InfoCall.tsx  InfoCards.tsx  InfoChat.tsx  Markdown.tsx  MarkdownRenderer.tsx  NotesPanel.tsx  PenToolbar.css  PenToolbar.tsx  PrepPanel.tsx  ReadingPipCard.tsx  SettingsView.tsx  Sidebar.tsx  SlidesDialog.tsx  SourcesPage.tsx  Toast.tsx  TraceList.css  TraceList.tsx  Vestibule.tsx  chat.tsx  chatParts.ts  icons.tsx  types.ts
src/figures/: catalog.ts  extract.ts  index.ts  lookup.ts  render.ts  store.ts  tools.ts  types.ts
src/fulltext/: bm25.ts  extract.ts  index.ts  query.ts  store.ts  types.ts
src/info/: builtins.ts  cards.ts  chat.ts  companion-tools.ts  engine.ts  feed.ts  feedback.ts  http.ts  id.ts  inline-images.ts  jiqizhixin.ts  knowledge.ts  live.ts  pipeline.ts  probe.ts  profile.ts  qbitai.ts  readable-select.ts  (+9 more)
tests/: context.test.ts  events.test.ts  fulltext.test.ts  library.test.ts  migrate.test.ts  reader-embedpdf-convert.test.ts  reader-embedpdf-paged-gesture.test.ts  settings.test.ts  storage.test.ts  tauri-fetch.test.ts  threads.test.ts
(+207 files in other folders)
