[package]
name = "reading-partner"
version = "0.6.1"
description = "AI reading partner"
authors = ["Reading-Partner"]
edition = "2021"

[lib]
name = "reading_partner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# unsafe-headers: lets the fetch bridge send an empty Origin, which the plugin
# treats as "remove the Origin header" — Anthropic's OAuth endpoints reject any
# request that looks like CORS (docs/pitfall/15).
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-opener = "2"
# Receive the Google iOS OAuth redirect: the reverse-client-id custom scheme is
# registered in tauri.conf.json (deep-link generates the Info.plist
# CFBundleURLTypes at iOS build time), and the frontend reads the redirect via
# onOpenUrl/getCurrent. Desktop keeps the loopback listener (oauth_callback.rs).
tauri-plugin-deep-link = "2"
# Platform detection to fork the OAuth flow (loopback on desktop, custom scheme
# on iOS); platform() is read synchronously in src/sync/googleConfig.ts.
tauri-plugin-os = "2"
# Read images from the system clipboard: WebKitGTK's DOM paste event often
# omits image data, so the shell reads the clipboard through Rust as a fallback.
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
# Push-to-talk voice input records the mic in Rust: WebKitGTK's getUserMedia is
# unreliable on Linux (the primary desktop), so cpal captures samples and hound
# encodes a 16 kHz mono WAV for the STT request (docs/15).
cpal = "0.15"
hound = "3.5"

# Full dev rebuilds peak at many GB of linker memory, which has triggered
# systemd-oomd to kill the whole desktop session (docs/pitfall/14).
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"
